Substituição de imagnes .jpg desproporcionais por imagens .png padronizadas

--- a/jogo-da-memoria-nebulosas-hubble/index.html
+++ b/jogo-da-memoria-nebulosas-hubble/index.html
@@ -10,52 +10,52 @@
 <body>
   <main class="memory-game">
     <div class="card" data-card="bubble">
-      <img src="./assets/images/bubble-nebula.jpg" alt="face da carta" class="card-front">
-      <img src="./assets/images/hubble-telescope.jpg" alt="verso da carta" class="card-back">
+      <img src="./assets/images/bubble-nebula.png" alt="face da carta" class="card-front">
+      <img src="./assets/images/hubble-telescope.png" alt="verso da carta" class="card-back">
     </div>
     <div class="card" data-card="cone">
-      <img src="./assets/images/cone-nebula.jpg" alt="face da carta" class="card-front">
-      <img src="./assets/images/hubble-telescope.jpg" alt="verso da carta" class="card-back">
+      <img src="./assets/images/cone-nebula.png" alt="face da carta" class="card-front">
+      <img src="./assets/images/hubble-telescope.png" alt="verso da carta" class="card-back">
     </div>
     <div class="card" data-card="horsehead">
-      <img src="./assets/images/horsehead-nebula.jpg" alt="face da carta" class="card-front">
-      <img src="./assets/images/hubble-telescope.jpg" alt="verso da carta" class="card-back">
+      <img src="./assets/images/horsehead-nebula.png" alt="face da carta" class="card-front">
+      <img src="./assets/images/hubble-telescope.png" alt="verso da carta" class="card-back">
     </div>
     <div class="card" data-card="M2-9-twin-jet">
-      <img src="./assets/images/M2-9-twin-jet-nebula.jpg" alt="face da carta" class="card-front">
-      <img src="./assets/images/hubble-telescope.jpg" alt="verso da carta" class="card-back">
+      <img src="./assets/images/M2-9-twin-jet-nebula.png" alt="face da carta" class="card-front">
+      <img src="./assets/images/hubble-telescope.png" alt="verso da carta" class="card-back">
     </div>
     <div class="card" data-card="NGC-6751">
-      <img src="./assets/images/NGC-6751.jpg" alt="face da carta" class="card-front">
-      <img src="./assets/images/hubble-telescope.jpg" alt="verso da carta" class="card-back">
+      <img src="./assets/images/NGC-6751.png" alt="face da carta" class="card-front">
+      <img src="./assets/images/hubble-telescope.png" alt="verso da carta" class="card-back">
     </div>
     <div class="card" data-card="southern-crab">
-      <img src="./assets/images/southern-crab-nebula.jpg" alt="face da carta" class="card-front">
-      <img src="./assets/images/hubble-telescope.jpg" alt="verso da carta" class="card-back">
+      <img src="./assets/images/southern-crab-nebula.png" alt="face da carta" class="card-front">
+      <img src="./assets/images/hubble-telescope.png" alt="verso da carta" class="card-back">
     </div>
     <div class="card" data-card="bubble">
-      <img src="./assets/images/bubble-nebula.jpg" alt="face da carta" class="card-front">
-      <img src="./assets/images/hubble-telescope.jpg" alt="verso da carta" class="card-back">
+      <img src="./assets/images/bubble-nebula.png" alt="face da carta" class="card-front">
+      <img src="./assets/images/hubble-telescope.png" alt="verso da carta" class="card-back">
     </div>
     <div class="card" data-card="cone">
-      <img src="./assets/images/cone-nebula.jpg" alt="face da carta" class="card-front">
-      <img src="./assets/images/hubble-telescope.jpg" alt="verso da carta" class="card-back">
+      <img src="./assets/images/cone-nebula.png" alt="face da carta" class="card-front">
+      <img src="./assets/images/hubble-telescope.png" alt="verso da carta" class="card-back">
     </div>
     <div class="card" data-card="horsehead">
-      <img src="./assets/images/horsehead-nebula.jpg" alt="face da carta" class="card-front">
-      <img src="./assets/images/hubble-telescope.jpg" alt="verso da carta" class="card-back">
+      <img src="./assets/images/horsehead-nebula.png" alt="face da carta" class="card-front">
+      <img src="./assets/images/hubble-telescope.png" alt="verso da carta" class="card-back">
     </div>
     <div class="card" data-card="M2-9-twin-jet">
-      <img src="./assets/images/M2-9-twin-jet-nebula.jpg" alt="face da carta" class="card-front">
-      <img src="./assets/images/hubble-telescope.jpg" alt="verso da carta" class="card-back">
+      <img src="./assets/images/M2-9-twin-jet-nebula.png" alt="face da carta" class="card-front">
+      <img src="./assets/images/hubble-telescope.png" alt="verso da carta" class="card-back">
     </div>
     <div class="card" data-card="NGC-6751">
-      <img src="./assets/images/NGC-6751.jpg" alt="face da carta" class="card-front">
-      <img src="./assets/images/hubble-telescope.jpg" alt="verso da carta" class="card-back">
+      <img src="./assets/images/NGC-6751.png" alt="face da carta" class="card-front">
+      <img src="./assets/images/hubble-telescope.png" alt="verso da carta" class="card-back">
     </div>
     <div class="card" data-card="southern-crab">
-      <img src="./assets/images/southern-crab-nebula.jpg" alt="face da carta" class="card-front">
-      <img src="./assets/images/hubble-telescope.jpg" alt="verso da carta" class="card-back">
+      <img src="./assets/images/southern-crab-nebula.png" alt="face da carta" class="card-front">
+      <img src="./assets/images/hubble-telescope.png" alt="verso da carta" class="card-back">
     </div>
   </main>
   <script src="assets/scripts.js"></script>
