Lista de Tarefas - Implementação 'Remover Tarefa': adição do ícone X e ajustes diversos

--- a/to-do-list/index.html
+++ b/to-do-list/index.html
@@ -19,7 +19,7 @@
           <h3>INSTRUÇÕES</h3>
           <ul>
             <li>Escreva a tarefa no campo.</li>
-            <li>Pressione a tecla "Enter" ou clique/toque no botão "Adicionar".</li>
+            <li>Pressione a tecla "Enter" ou clique/toque em "Adicionar".</li>
             <li>Após completar uma tarefa, marque sua caixa de seleção correspondente.</li>
           </ul>
           <p>ATENÇÃO: Ao fechar ou atualizar a página, os dados serão perdidos. Portanto adicione apenas as tarefas que
