--- a/to-do-list/index.html
+++ b/to-do-list/index.html
@@ -14,25 +14,26 @@
     <div class="linha"> <!-- Para dividir a página no meio, crio uma linha com duas colunas -->
 
       <div class="coluna1">
-        <h1>Lista de Tarefas &#128221</h1>
+        <h1 id="titulo-coluna-1">Lista de Tarefas &#128221</h1>
         <div class="instrucoes">  <!-- Instruções sobre como usar a aplicação -->
           <h3>INSTRUÇÕES</h3>
           <ul>
             <li>Escreva a tarefa no campo.</li>
             <li>Pressione a tecla "Enter" ou clique/toque em "Adicionar".</li>
             <li>Após completar uma tarefa, marque sua caixa de seleção correspondente.</li>
+            <li>Para remover uma tarefa, clique no ícone &#10006.</li>
           </ul>
           <p>ATENÇÃO: Ao fechar ou atualizar a página, os dados serão perdidos. Portanto adicione apenas as tarefas que
             você pretende realizar HOJE.</p>
         </div>
 
-        <h2 id="msgSecreta" tabindex="1">Lembre-se que ter sucesso em uma meta simples é melhor do que falhar em uma meta impossível.
-        </h2> <!-- Uma mensagem secreta motivacional que aparece so ser clicada -->
+        <p id="msgSecreta" tabindex="1">Lembre-se que ter sucesso em uma meta simples é melhor do que falhar em uma meta impossível.
+        </p> <!-- Uma mensagem secreta motivacional que aparece so ser clicada -->
 
       </div>
 
       <div class="coluna2">
-        <h2>Mãos à obra!</h2>
+        <h1 id="titulo-coluna-2">Mãos à obra!</h1>
         <div id="criadorTarefas">  <!-- Entrada para o usuário criar tarefas -->
           <input id="entrada" type="text" placeholder="Digite aqui sua tarefa">
           <button id="botao" type="button">Adicionar</button>
