Lista de Tarefas - Implementação 'Botão para Limpar lista' concluída

--- a/to-do-list/index.html
+++ b/to-do-list/index.html
@@ -36,11 +36,13 @@
         <h1 id="titulo-coluna-2">Mãos à obra!</h1>
         <div id="criadorTarefas">  <!-- Entrada para o usuário criar tarefas -->
           <input id="entrada" type="text" placeholder="Digite aqui sua tarefa">
-          <button id="botao" type="button">Adicionar</button>
+          <button id="adicionar" type="button">Adicionar</button>
         </div>
 
         <div id="listaTarefas">  <!-- Lista de tarefas que sempre inicializa vazia -->
         </div>
+
+        <button id="limpar" type="button">Limpar</button>
 
       </div>
 
